@@ -65,6 +65,17 @@ Drake.prototype.DropTable = function() {
 	if(Math.random() < 0.5)  drops.push({ it: Items.SVenom });
 	if(Math.random() < 0.5)  drops.push({ it: Items.SClaw });
 	*/
+	if(Math.random() < 0.1)  drops.push({ it: Items.Lacertium });
+	if(Math.random() < 0.1)  drops.push({ it: Items.Taurico });
+	if(Math.random() < 0.1)  drops.push({ it: Items.Nagazm });
+	
+	if(Math.random() < 0.1)  drops.push({ it: Items.BlackGem });
+	if(Math.random() < 0.1)  drops.push({ it: Items.DemonSeed });
+	if(Math.random() < 0.1)  drops.push({ it: Items.SnakeFang });
+	if(Math.random() < 0.1)  drops.push({ it: Items.SnakeOil });
+	if(Math.random() < 0.3)  drops.push({ it: Items.LizardEgg });
+	if(Math.random() < 0.3)  drops.push({ it: Items.LizardScale });
+	
 	return drops;
 }
 
